--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@
 /.bundle
 
 # Ignore the default SQLite database.
+/db/*.sqlite3
 /db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
+/tmp/*
 /log/*
 !/log/.keep
 !/tmp/.keep
@@ -19,7 +21,5 @@
 /yarn-error.log
 
 .byebug_history
-/publics/uploads
 
 .DS_Store
-.cache
